# web_hm1

./: MANIFEST.in  ab_classes.py  config.JSON  main.py  note.JSON  notebook.py  phonebook.JSON  pyproject.toml  setup.py
.history/: MANIFEST_20230510201142.in  README.ua_20230510192609.md  README.ua_20230510201255.md  README.ua_20230511130745.md  README.ua_20230511132708.md  README.ua_20230512162929.md  README_20230510192601.md  README_20230510201252.md  README_20230511130750.md  README_20230511132704.md  README_20230512162952.md  install_manual_20230504175527.txt  install_manual_20230511104116.txt  install_manual_20230511132717.txt  install_manual_20230511134413.txt  install_manual_20230512163552.txt  install_manual_20230512164838.txt  requirements_20230510192547.txt  requirements_20230512164844.txt  setup_20230504175501.py  setup_20230510192541.py  setup_20230510192621.py  setup_20230510195723.py  setup_20230510201300.py  setup_20230511130739.py  setup_20230511132701.py  setup_20230511134340.py  setup_20230512162917.py  setup_20230512164850.py
.history/MemoMind/: README.ua_20230504193735.md  README.ua_20230511130802.md  README.ua_20230511132721.md  README.ua_20230511134322.md  README.ua_20230512131042.md  README.ua_20230512132030.md  README.ua_20230512145016.md  README_20230504201103.md  README_20230512131102.md  README_20230512131930.md  README_20230512132143.md  README_20230512145005.md  ab_classes_20230511102615.py  ab_classes_20230511180017.py  ab_classes_20230511181821.py  ab_classes_20230511182903.py  (+93 more)
memomind/: ab_classes.py  main.py  notebook.py
