[tool.poetry]
name = "helper"
version = "0.1.0"
description = ""
authors = ["BonesetterB <122158929+BonesetterB@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
pyttsx3 = "^2.90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
